--- a/demo/DemoWebSite/Web.config
+++ b/demo/DemoWebSite/Web.config
@@ -20,7 +20,7 @@
 
 
 	<xrc>
-		<rootPath virtualPath="~/root" />
+		<rootPath virtualPath="~/xrc" />
 		<sites>
 			<add key="local" uri="http://localhost:8082/DemoWebSite">
 				<parameters>
