--- a/src/xrc/xrc.csproj
+++ b/src/xrc/xrc.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Modules\IModuleFactory.cs" />
     <Compile Include="Kernel\IXrcService.cs" />
     <Compile Include="Kernel\XrcService.cs" />
+    <Compile Include="Pages\Providers\FileSystem\Parsers\XHtmlParserService.cs" />
     <Compile Include="Pages\Providers\FileSystem\Parsers\IXrcSchemaParserService.cs" />
     <Compile Include="Pages\Providers\FileSystem\Parsers\XrcSchemaParserService.cs" />
     <Compile Include="Pages\Providers\FileSystem\Parsers\ParserServiceBase.cs" />
