--- a/src/xrc.Windsor/xrc.Windsor.csproj
+++ b/src/xrc.Windsor/xrc.Windsor.csproj
@@ -52,6 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="ModuleFactory.cs" />
     <Compile Include="RendererFactory.cs" />
     <Compile Include="XrcDefaultInstaller.cs" />
@@ -60,7 +63,7 @@
   <ItemGroup>
     <ProjectReference Include="..\xrc\xrc.csproj">
       <Project>{71988DA4-8569-490F-9D08-5B47EF2202F7}</Project>
-      <Name>xrc %28src\xrc%29</Name>
+      <Name>xrc</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
