--- a/test/xrc.UnitTest/xrc.UnitTest.csproj
+++ b/test/xrc.UnitTest/xrc.UnitTest.csproj
@@ -65,12 +65,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\XrcSection_Test.cs" />
+    <Compile Include="Markdown\MarkdownService_Test.cs" />
     <Compile Include="Mocks\ContextMock.cs" />
     <Compile Include="Mocks\SitesConfigMock.cs" />
     <Compile Include="Mocks\MashupScriptServiceMock.cs" />
     <Compile Include="Mocks\RootPathConfigMock.cs" />
     <Compile Include="Modules\ModuleCatalogService_Test.cs" />
     <Compile Include="Modules\TestModule.cs" />
+    <Compile Include="Pages\Providers\FileSystem\MarkdownParserService_Test.cs" />
     <Compile Include="Pages\Providers\FileSystem\XsltParserService_Test.cs" />
     <Compile Include="Pages\Providers\FileSystem\RazorParserService_Test.cs" />
     <Compile Include="Pages\Providers\FileSystem\HtmlParserService_Test.cs" />
@@ -90,6 +92,7 @@
     <Compile Include="Script\ScriptService_Test.cs" />
     <Compile Include="Pages\Providers\FileSystem\PageLocatorService_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\MarkdownView_Test.cs" />
     <Compile Include="Views\Xslt\XsltView_Test.cs" />
     <Compile Include="Mocks\ScriptServiceMock.cs" />
     <Compile Include="Pages\Script\PageScriptService_Test.cs" />
@@ -144,6 +147,9 @@
     <Content Include="sampleWebSite2\conventions_xsltonly.xrc.xslt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="sampleWebSite2\conventions_markdown.xrc.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <Content Include="Views\Xslt\books.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -210,7 +216,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\xrc\xrc.csproj">
       <Project>{71988DA4-8569-490F-9D08-5B47EF2202F7}</Project>
-      <Name>xrc %28src\xrc%29</Name>
+      <Name>xrc</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
