--- a/demo/DemoWebSite/xrc/books/xrc.config
+++ b/demo/DemoWebSite/xrc/books/xrc.config
@@ -2,7 +2,7 @@
 <xrc:page xmlns:xrc="urn:xrc">
 
 	<xrc:parameters>
-		<!-- this parameter are inherited from xrc files of this folder -->
+		<!-- these parameters are inherited from xrc files of this folder -->
 		<xrc:add key="activeMenu" value="books" />
 	</xrc:parameters>
 
