--- a/demo/DemoWebSite/xrc/docs/xrc.config
+++ b/demo/DemoWebSite/xrc/docs/xrc.config
@@ -3,8 +3,7 @@
 
 	<xrc:parameters>
 		<!-- these parameters are inherited from xrc files of this folder -->
-		<xrc:add key="title" value="olympics" />
-		<xrc:add key="activeMenu" value="olympics" />
+		<xrc:add key="title" value="docs" />
 	</xrc:parameters>
 
 </xrc:page>
