--- a/demo/DemoWebSite/DemoWebSite.csproj
+++ b/demo/DemoWebSite/DemoWebSite.csproj
@@ -92,9 +92,13 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="xrc\books\genre\{genre}\shared\_layout.cshtml" />
     <None Include="xrc\books\xrc.config">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="xrc\books\genre\{genre}\shared\_layout.xrc">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="xrc\books\_loremIpsum.xrc.xhtml">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
