--- a/test/xrc.UnitTest/xrc.UnitTest.csproj
+++ b/test/xrc.UnitTest/xrc.UnitTest.csproj
@@ -81,6 +81,8 @@
     <Compile Include="Pages\Providers\FileSystem\PageParserResult_Test.cs" />
     <Compile Include="Pages\Providers\FileSystem\XrcFileSystemHelper_Test.cs" />
     <Compile Include="Pages\Providers\FileSystem\FileSystemPageProviderService_Test.cs" />
+    <Compile Include="Pages\UriSegmentParameter_Test.cs" />
+    <Compile Include="UriExtensions_Test.cs" />
     <Compile Include="Views\ViewCatalogService_Test.cs" />
     <Compile Include="Sites\SiteConfigurationProviderService_Test.cs" />
     <Compile Include="Sites\SiteConfiguration_Test.cs" />
