Refactoring of pages and locator (in progress)

--- a/src/xrc/xrc.csproj
+++ b/src/xrc/xrc.csproj
@@ -95,22 +95,26 @@
     <Compile Include="Kernel\IXrcService.cs" />
     <Compile Include="Kernel\XrcService.cs" />
     <Compile Include="Pages\ParametricUriSegmentResult.cs" />
-    <Compile Include="Pages\Providers\FileSystem\XrcItem.cs" />
-    <Compile Include="Pages\Providers\FileSystem\Parsers\MarkdownParserService.cs" />
-    <Compile Include="Pages\Providers\FileSystem\Parsers\XsltParserService.cs" />
-    <Compile Include="Pages\Providers\FileSystem\Parsers\RazorParserService.cs" />
-    <Compile Include="Pages\Providers\FileSystem\Parsers\HtmlParserService.cs" />
-    <Compile Include="Pages\Providers\FileSystem\Parsers\XHtmlParserService.cs" />
-    <Compile Include="Pages\Providers\FileSystem\Parsers\IXrcSchemaParserService.cs" />
-    <Compile Include="Pages\Providers\FileSystem\Parsers\XrcSchemaParserService.cs" />
-    <Compile Include="Pages\Providers\FileSystem\Parsers\ParserServiceBase.cs" />
-    <Compile Include="Pages\Providers\FileSystem\Parsers\IParserService.cs" />
-    <Compile Include="Pages\Providers\FileSystem\Parsers\XrcParserService.cs" />
+    <Compile Include="Pages\Providers\Common\IPageStructureService.cs" />
+    <Compile Include="Pages\Providers\Common\PageLocatorResult.cs" />
+    <Compile Include="Pages\Providers\Common\XrcItem.cs" />
+    <Compile Include="Pages\Providers\Common\XrcItemType.cs" />
+    <Compile Include="Pages\Providers\Common\Parsers\MarkdownParserService.cs" />
+    <Compile Include="Pages\Providers\Common\Parsers\XsltParserService.cs" />
+    <Compile Include="Pages\Providers\Common\Parsers\RazorParserService.cs" />
+    <Compile Include="Pages\Providers\Common\Parsers\HtmlParserService.cs" />
+    <Compile Include="Pages\Providers\Common\Parsers\XHtmlParserService.cs" />
+    <Compile Include="Pages\Providers\Common\Parsers\IXrcSchemaParserService.cs" />
+    <Compile Include="Pages\Providers\Common\Parsers\XrcSchemaParserService.cs" />
+    <Compile Include="Pages\Providers\Common\Parsers\ParserServiceBase.cs" />
+    <Compile Include="Pages\Providers\Common\IParserService.cs" />
+    <Compile Include="Pages\Providers\Common\Parsers\XrcParserService.cs" />
+    <Compile Include="Pages\Providers\FileSystem\FileSystemPageStructureService.cs" />
     <Compile Include="Pages\Providers\FileSystem\XrcFile.cs" />
     <Compile Include="Pages\Providers\FileSystem\XrcFileSystemHelper.cs" />
-    <Compile Include="Pages\Providers\FileSystem\FileSystemPage.cs" />
+    <Compile Include="Pages\Providers\Common\Page.cs" />
     <Compile Include="Pages\Providers\FileSystem\FileSystemPageProviderService.cs" />
-    <Compile Include="Pages\Providers\FileSystem\PageParserResult.cs" />
+    <Compile Include="Pages\Providers\Common\PageParserResult.cs" />
     <Compile Include="Pages\Providers\IPageProviderService.cs" />
     <Compile Include="Pages\ParametricUriSegment.cs" />
     <Compile Include="Razor\XrcWebViewPageExtension.cs" />
@@ -159,9 +163,9 @@
     <Compile Include="Pages\ViewDefinitionList.cs" />
     <Compile Include="Pages\PageActionList.cs" />
     <Compile Include="Pages\Providers\FileSystem\XrcFolder.cs" />
-    <Compile Include="Pages\Providers\FileSystem\PageParserService.cs" />
-    <Compile Include="Pages\Providers\FileSystem\PageLocatorService.cs" />
-    <Compile Include="Pages\Providers\FileSystem\IPageLocatorService.cs" />
+    <Compile Include="Pages\Providers\Common\PageParserService.cs" />
+    <Compile Include="Pages\Providers\Common\PageLocatorService.cs" />
+    <Compile Include="Pages\Providers\Common\IPageLocatorService.cs" />
     <Compile Include="Pages\ViewDefinition.cs" />
     <Compile Include="Script\ScriptService.cs" />
     <Compile Include="Script\IScriptService.cs" />
@@ -169,7 +173,7 @@
     <Compile Include="Pages\XProperty.cs" />
     <Compile Include="Pages\XClass.cs" />
     <Compile Include="Script\ScriptExpression.cs" />
-    <Compile Include="Pages\Providers\FileSystem\IPageParserService.cs" />
+    <Compile Include="Pages\Providers\Common\IPageParserService.cs" />
     <Compile Include="Pages\PageAction.cs" />
     <Compile Include="Pages\IPage.cs" />
     <Compile Include="UriExtensions.cs" />
@@ -178,7 +182,6 @@
     <Compile Include="Views\JsonView.cs" />
     <Compile Include="Views\XsltView.cs" />
     <Compile Include="Views\RazorView.cs" />
-    <Compile Include="Pages\Providers\FileSystem\XrcFileResource.cs" />
     <Compile Include="Views\IView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
